--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body{
     "top-block top-block top-block top-block top-block top-block"
     "navbar navbar navbar navbar navbar navbar"
     "main main main main main main"
-    "how-it-works how-it-works how-it-works how-it-works how-it-works how-it-works";
+    "how-it-works how-it-works how-it-works how-it-works how-it-works how-it-works"
+    "footer footer footer footer footer footer";
     
 
 }
@@ -152,7 +153,7 @@ p, .join-button{
 
     background-color: #A9A19E;
     display: flex;
-    padding-bottom: 11rem;
+    padding-bottom: 2rem;
     justify-content: space-around;
     
 }
@@ -193,8 +194,8 @@ p, .join-button{
 .main .card-row{
     display: flex;
     justify-content: space-evenly;
-    background-color: #A9A19E;
-    position: relative;
+    background: linear-gradient(to bottom, #A9A19E
+     50%, orange 50%);
 }
 .main article .small-card{
     background-color: white;
@@ -240,7 +241,6 @@ p, .join-button{
 
 
 
-
 .main .card-row .small-card .blue img{
     width: 6rem;
     height: 10rem;
@@ -265,6 +265,7 @@ p, .join-button{
     object-position: 100% 3.6rem;
 
 }
+
 .main .card-row .small-card .card-text p {
     font-family: Fira Sans;
     color: rgba(0, 0, 0, 0.4);
@@ -279,33 +280,10 @@ p, .join-button{
     flex: 1;
 }
 
-
-
-.main article .one{
-
-    position: absolute;
-    left: 90px;
-    bottom: -150px;
-}
-
-.main article .two{
-
-    position: absolute;
-    left: 370px;
-    bottom: -150px;
-}
-
-
-.main article .three{
-
-    position: absolute;
-    right: 90px;
-    bottom: -150px;
-}
 .main .footer-block{
     text-align: center;
     background-color: orange;
-    padding: 11rem 7.5rem;
+    padding: 4rem 7.5rem;
     padding-bottom: 6rem;
 }
 .main .footer-block h1 {
@@ -331,7 +309,7 @@ p, .join-button{
     flex-flow: wrap;
 }
 .how-it-works-blocks section{
-    width: 33%;
+width: 33.33333334%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -339,7 +317,7 @@ p, .join-button{
 
 }
 .how-it-works-blocks section aside {
-    align-self: flex-start;
+    
 }
 .how-it-works-blocks section h2 {
     color: rgba(0, 0, 0, 0.8);
@@ -385,6 +363,33 @@ p, .join-button{
     background-color: #FFFFFF;
 }
 
+footer{
+
+    grid-area: footer;
+}
+
 footer .button-up {
     background-color: #A9A19E;
+    width: 100%;
+    border: none;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.button-up p{
+    margin-top: -10px;
+    font-size: 22px;
+}
+
+footer .iconify{
+
+    font-size: 32px;
+}
+
+footer .floor{
+    height: 300px;
+    background-color: #4b4949;
 }
