--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@
 *{
     box-sizing: border-box;
 }
-
 body{
-
+    margin: 0;
     background-size: 100% 100vh;
     background-color: #E5E5E5;
 }
@@ -23,10 +22,7 @@ body{
     "main main main main main main"
     "how-it-works how-it-works how-it-works how-it-works how-it-works how-it-works"
     "footer footer footer footer footer footer";
-    
-
 }
-
 .join-button {
     background-color: #FFF;
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
@@ -80,6 +76,7 @@ p, .join-button{
     margin-left: 6.5rem;
     margin-right: auto;
 }
+
 /*Top-block RIGHT*/
 .top-block .right-side{
     flex:1;
@@ -127,7 +124,7 @@ p, .join-button{
     font-weight: 600;
     color: #000;
 }
-.navbar li a:hover{
+.navbar .current-page{
     opacity: 1;
 }
 .navbar ul .link-one {
@@ -142,23 +139,19 @@ p, .join-button{
 .navbar ul .link-four {
     grid-area: link-four;
 }
-/*HEADER*/
+
+/*MAIN*/
 .main {
     grid-area: main;
     display: flex;
     flex-direction: column;
 }
-
 .main .header-block{
-
     background-color: #A9A19E;
     display: flex;
     padding-bottom: 2rem;
     justify-content: space-around;
-    
 }
-
-
 .main .header-block .head-left{
     display: flex;
     flex-direction: column;
@@ -171,15 +164,12 @@ p, .join-button{
     line-height: 2.813rem;
     padding-top: 6.438rem;
     padding-left: 6.75rem;
-    padding-right: rem;
     padding-bottom: 3.625rem;
 }
-
 .main .header-block .head-left .join-button {
     align-self: flex-start;
     margin-left: 6.75rem;
 }
-
 .main .header-block .head-right{
     flex: 1; 
 }
@@ -190,6 +180,7 @@ p, .join-button{
     margin: 0;
     color: rgba(0, 0, 0, 0.6);
 }
+
 /* CARD ROW */
 .main .card-row{
     display: flex;
@@ -208,7 +199,6 @@ p, .join-button{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     border-radius: 5px;
-
 }
 .main .card-row .small-card header{
     flex: 1;
@@ -220,65 +210,46 @@ p, .join-button{
     align-items: flex-end;
     transform: translateY(-10px);
     border-radius: 4px;
-
 }
-
 .main .card-row .small-card .blue{
     background-color: #C7DDEA;
-    
-
 }
 .main .card-row .small-card .orange{
     background-color: #FAB131;
-
 }
-
 .main .card-row .small-card .red{
     background-color: #F17949;
-
 }
-
-
-
 .main .card-row .small-card .blue img{
     width: 6rem;
     height: 10rem;
     object-fit: cover; 
     object-position: 100% 1rem;
-    
-
 }
-
 .main .card-row .small-card .orange img{
     width: 6rem;
     height: 10rem;
     object-fit: cover; 
     object-position: 100% 1rem;
-
 }
-
 .main .card-row .small-card .red img{
     width: 8rem;
     height: 12rem;
     object-fit: cover; 
     object-position: 100% 3.6rem;
-
 }
-
 .main .card-row .small-card .card-text p {
-    font-family: Fira Sans;
+    font-family: 'Fira Sans';
     color: rgba(0, 0, 0, 0.4);
     font-weight: 700;
     font-size: 0.688rem;
     line-height: 18px;
     padding: 0 1.313rem 1.313rem 1.313rem;
 } 
-
 .main .card-row .small-card footer{
     text-align: center;
     flex: 1;
 }
-
 .main .footer-block{
     text-align: center;
     background-color: orange;
@@ -308,20 +279,16 @@ p, .join-button{
     flex-flow: wrap;
 }
 .how-it-works-blocks section{
-width: 33.33333334%;
-    display: flex;
+    width: 33.33333334%;
+    position: relative;
+    display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-}
-.how-it-works-blocks section aside {
-    
 }
 .how-it-works-blocks section h2 {
     color: rgba(0, 0, 0, 0.8);
     font-size: 2.813rem;
-    
     font-weight: 900;
     line-height: 2.813rem;
     padding: 2rem;
@@ -333,13 +300,13 @@ width: 33.33333334%;
     margin: 0;    
     padding: 1.5rem;
     padding-bottom: 0;
-    
+    position: absolute;
+    right: 15rem;
 }
 .how-it-works-blocks section p {
-    align-self: center;
-    padding: 3rem 4rem;
+    padding: 9.125rem 4rem;
     text-align: center;
-    margin-bottom: 5rem;
+    margin: 0;
     color: rgba(0, 0, 0, 0.7);
 }
 .how-it-works-blocks .block-one{
@@ -361,33 +328,138 @@ width: 33.33333334%;
     background-color: #FFFFFF;
 }
 
+/* FOOTER */
 footer{
-
     grid-area: footer;
 }
-
 footer .button-up {
     background-color: #A9A19E;
     width: 100%;
     border: none;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-
+    position: relative;
+    padding: 2rem;
+    color: rgba(0, 0, 0, 0.7);
+    font-family: 'Fira Sans';
+    font-size: 1.063rem;
+    font-weight: 500;
 }
-
-.button-up p{
-    margin-top: -10px;
-    font-size: 22px;
-}
-
 footer .iconify{
-
     font-size: 32px;
+    transform: translateY(-30px)translateX(55px);
+    position: absolute;
 }
-
 footer .floor{
     height: 300px;
     background-color: #4b4949;
+}
+
+/* PAGE 2 - CONTACT-FORM */
+.heading .left-side{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto;
+    grid-template-areas: ". heading img-man";
+    text-align: center;
+}
+.heading .left-side h2 {
+    font-size: 2.813rem;
+    grid-area: heading;
+    margin: auto 0;
+}
+.heading .left-side img {
+    grid-area: img-man;
+    margin: 0 auto;
+    padding-top: 3rem;
+}  
+
+.navbar-type-2{
+    background-color: white
+}
+
+/*CONTACT-BLOCK*/
+.contact-block {
+    grid-area: main;
+    background-color: #A9A19E;
+    display: flex;
+}
+.contact-block .left-side{
+    display: flex;
+    flex: 1;
+    padding: 4rem;
+}
+.contact-block .left-side h2 {
+    font-size:2.813rem;
+    color: #fff;
+}
+.contact-block .right-side{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding-right: 10rem;
+    padding-bottom: 6rem;
+    padding-top: 6rem;
+}
+.contact-block .right-side p{
+    color: #fff;
+    font-size: 0.875rem;
+    font-weight: 700;
+    margin-bottom: 0;
+    margin-top: 2rem;
+    opacity: 0.7;
+}
+.contact-block .right-side input{
+    padding: 1rem;
+    border: none;
+    border-radius: 2px;
+}
+.contact-block .right-side textarea{
+    padding: 1rem;
+    border: none;
+    border-radius: 2px;
+}
+.contact-block .right-side textarea::placeholder{
+    color: #000;
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Fira Sans', sans-serif;
+}
+.contact-block .right-side .message{
+    height: 12rem;
+}
+.contact-block .right-side button{
+    width: 8.18rem;
+    padding: 0.5rem ;
+    margin-top: 2rem;
+    margin-left: 14rem;
+}
+
+/*FOOTER*/
+footer .img-background{
+    background-image: url(/img/map-contact.png);
+    background-repeat:no-repeat;
+    background-size:cover;
+    display: flex;
+    padding: 8rem 0rem 8rem 10rem;
+}
+footer .text-field{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    width: 22rem;
+    background-color: #FAB131;
+    color: #fff;
+    transform: translateY(-5rem) translateX(-5rem);
+}
+footer .text-field h2 {
+    font-size: 2.813rem;
+    margin: 0;
+}
+footer .text-field p {
+    font-size: 0.875rem;
+    margin: 0;
+    color: rgba(255, 255, 255, 0.800);
+}
+footer .img-background img{
+    padding: 4rem;
+    transform:translateX(-5rem)
 }
